[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/UI/page/latar_synthesis.jpg" type="Texture" id=1]
[ext_resource path="res://assets/img/koleksi/koleksi_singhasari.png" type="Texture" id=2]
[ext_resource path="res://assets/Splash/wave.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button/confirm_press2.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button/confirm.png" type="Texture" id=5]
[ext_resource path="res://script/Synthesis.gd" type="Script" id=6]
[ext_resource path="res://assets/UI/button/btn_mini_info_press.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/button/btn_mini_info.png" type="Texture" id=8]
[ext_resource path="res://scene/Window/dialog_window.res" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "generate"
length = 3.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control/obj:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control/obj:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Control/obj:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Control/obj:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 33.5, -0.44, -1, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Control/obj:rect_scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Control/obj:rect_scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Control/obj:rect_position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -44.0347, -0.25, 0, 0.25, 0, 2.49999, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Control/obj:rect_position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( -33.748, -0.25, 0, 0.25, 0, -2.28661, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Control/obj:rect_size:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 270, -0.25, 0, 0.25, 0, 191, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Control/obj:rect_size:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 271, -0.25, 0, 0.25, 0, 206, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 1.1 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Control/obj:modulate:r")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Control/obj:modulate:g")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Control/obj:modulate:b")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Control/obj:modulate:a")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Wave:modulate:r")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.3 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Wave:modulate:g")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.3 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("Wave:modulate:b")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.3 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("Wave:modulate:a")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.3 )
}
tracks/18/type = "bezier"
tracks/18/path = NodePath("ColorRect:color:r")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/19/type = "bezier"
tracks/19/path = NodePath("ColorRect:color:g")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/20/type = "bezier"
tracks/20/path = NodePath("ColorRect:color:b")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/21/type = "bezier"
tracks/21/path = NodePath("ColorRect:color:a")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/22/type = "bezier"
tracks/22/path = NodePath("Wave:rect_position:x")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"points": PoolRealArray( 284.63, -0.25, 0, 0.25, 0, -1034, -0.25, 0, 0.25, 0, -1034, -0.25, 0, 0.25, 0, 284.63, -0.25, 0, 0.25, 0, -1034, -0.25, 0, 0.25, 0, -1034, -0.25, 0, 0.25, 0, 284.63, -0.25, 0, 0.25, 0, -1034, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7, 2.2, 2.3, 2.7, 2.8, 2.9, 3.3 )
}
tracks/23/type = "bezier"
tracks/23/path = NodePath("Wave:rect_position:y")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"points": PoolRealArray( 95.2647, -0.25, 0, 0.25, 0, -1141, -0.25, 0, 0.25, 0, -1141, -0.25, 0, 0.25, 0, 95.2647, -0.25, 0, 0.25, 0, -1141, -0.25, 0, 0.25, 0, -1141, -0.25, 0, 0.25, 0, 95.2647, -0.25, 0, 0.25, 0, -1141, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7, 2.2, 2.3, 2.7, 2.8, 2.9, 3.3 )
}
tracks/24/type = "bezier"
tracks/24/path = NodePath("Wave:rect_size:x")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"points": PoolRealArray( 191, -0.25, 0, 0.25, 0, 2796, -0.25, 0, 0.25, 0, 2796, -0.25, 0, 0.25, 0, 191, -0.25, 0, 0.25, 0, 2796, -0.25, 0, 0.25, 0, 2796, -0.25, 0, 0.25, 0, 191, -0.25, 0, 0.25, 0, 2796, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7, 2.2, 2.3, 2.7, 2.8, 2.9, 3.3 )
}
tracks/25/type = "bezier"
tracks/25/path = NodePath("Wave:rect_size:y")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"points": PoolRealArray( 192, -0.25, 0, 0.25, 0, 2811, -0.25, 0, 0.25, 0, 2811, -0.25, 0, 0.25, 0, 192, -0.25, 0, 0.25, 0, 2811, -0.25, 0, 0.25, 0, 2811, -0.25, 0, 0.25, 0, 192, -0.25, 0, 0.25, 0, 2811, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7, 2.2, 2.3, 2.7, 2.8, 2.9, 3.3 )
}
tracks/26/type = "bezier"
tracks/26/path = NodePath("Control/obj/Ok2:modulate:r")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7 )
}
tracks/27/type = "bezier"
tracks/27/path = NodePath("Control/obj/Ok2:modulate:g")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7 )
}
tracks/28/type = "bezier"
tracks/28/path = NodePath("Control/obj/Ok2:modulate:b")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7 )
}
tracks/29/type = "bezier"
tracks/29/path = NodePath("Control/obj/Ok2:modulate:a")
tracks/29/interp = 1
tracks/29/loop_wrap = true
tracks/29/imported = false
tracks/29/enabled = true
tracks/29/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 1.7 )
}

[node name="Synthesis" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.839
margin_bottom = 77.28
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Wave" type="TextureRect" parent="."]
anchor_left = 0.528
anchor_top = 0.398
anchor_right = 0.528
anchor_bottom = 0.398
margin_left = -1414.16
margin_top = -1332.04
margin_right = 1381.84
margin_bottom = 1478.96
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/generate = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.532
anchor_right = 0.532
anchor_bottom = 1.0
margin_left = -98.04
margin_top = 95.0
margin_right = 97.96
margin_bottom = -169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obj" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 33.5 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -110.287
margin_right = 95.5
margin_bottom = 95.7134
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok2" type="TextureButton" parent="Control/obj"]
anchor_top = 0.815
anchor_right = 1.0
anchor_bottom = 0.948
margin_left = 125.5
margin_top = 11.61
margin_right = -24.5
margin_bottom = 17.212
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="TextureButton" parent="."]
anchor_top = 0.815
anchor_right = 1.0
anchor_bottom = 0.948
margin_left = 33.0
margin_top = -0.200012
margin_right = -19.0
margin_bottom = -0.0400391
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="dialog_window" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="pressed" from="Control/obj/Ok2" to="." method="_on_info"]
[connection signal="pressed" from="Ok" to="." method="_Ok_pressed"]
